# hivex

./: .gitignore  Dockerfile  FUZZING  Makefile.am  README  README.md  SECURITY  TODO  autogen.sh  bootstrap  cfg.mk  configure.ac  hivex.pc.in  run.in  tx-pull.sh
.tx/: config
extra-tests/: Makefile.am  README  check-regedit.sh  fuzz.pl  insert-keys.pl
generator/: Makefile.am  generator.ml
gnulib/lib/: Makefile.am
hivex/: Makefile.am  hivex.c
images/: Makefile.am  README  mklarge.c  mkrlenvalue_test_hive.py  rlenvalue_test_hive  special
images/mkzero/: Makefile  mkzero.c
include/: Makefile.am
lib/: Makefile.am  byte_conversions.h  handle.c  hivex-internal.h  hivex.c  hivex.pc.in  mmap.c  mmap.h  node.c  ocaml_edits.txt  offset-list.c  test-just-header.c  utf16.c  util.c  value.c  visit.c  write.c
lib/local/: hivex.pc.in
lib/tools/: visualizer.ml
m4/: .gitignore
ocaml/: .depend  META.in  Makefile.am
ocaml/t/: hivex_005_load.ml  hivex_010_open.ml  hivex_020_root.ml  hivex_100_errors.ml  hivex_110_gc_handle.ml  hivex_120_rlenvalue.ml  hivex_200_write.ml  hivex_300_fold.ml
perl/: Makefile.PL.in  Makefile.am  run-perl-tests  run-perl-tests.in  typemap
perl/lib/Win/Hivex/: Regedit.pm
perl/t/: 005-pod.t  006-pod-coverage.t  010-load.t  020-open.t  021-close.t  120-rlenvalue.t  130-special.t  200-write.t  210-setvalue.t  510-regedit-load.t  550-regedit-export.t  560-regedit-import.t  570-regedit-import2.t
po/: LINGUAS  Makevars  POTFILES.in  ca.po  cs.po  de.po  es.po  eu.po  fr.po  gu.po  hi.po  hivex.pot  hu.po  id.po  it.po  ja.po  ka.po  kn.po  ml.po  mr.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sr.po  ta.po  te.po  uk.po  zanata-pull.sh  zanata.xml  zh_CN.po
python/: Makefile.am  run-python-tests  run-python-tests.in
python/t/: 010-import.py  020-open.py  021-close.py  120-rlenvalue.py  130-special.py  200-write.py  210-setvalue.py  300-setvalue-types.py
regedit/: Makefile.am  hivexregedit  run-locally
ruby/: Makefile.am  README.rdoc  Rakefile.in  run-ruby-tests  run-ruby-tests.in
ruby/doc/site/: index.html
ruby/ext/hivex/: extconf.rb
ruby/lib/: hivex.rb
ruby/tests/: tc_010_load.rb  tc_021_close.rb  tc_120_rlenvalue.rb  tc_130_special.rb  tc_200_write.rb  tc_210_setvalue.rb  test_helper.rb
sh/: Makefile.am  example1  example2  example3  example4  example5  hivexget  hivexget.pod  hivexsh.c  hivexsh.pod
xml/: Makefile.am  hivexml.c  hivexml.pod
